; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/rtwn/rtl8812a/extr_r12a_fw.c_r12a_fw_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/rtwn/rtl8812a/extr_r12a_fw.c_r12a_fw_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtwn_softc = type { i32 }

@R92C_RSV_CTRL = common dso_local global i64 0, align 8
@R92C_RSV_CTRL_WLOCK_00 = common dso_local global i32 0, align 4
@R92C_SYS_FUNC_EN = common dso_local global i32 0, align 4
@R92C_SYS_FUNC_EN_CPUEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @r12a_fw_reset(%struct.rtwn_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.rtwn_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.rtwn_softc* %0, %struct.rtwn_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.rtwn_softc*, %struct.rtwn_softc** %3, align 8
  %6 = load i64, i64* @R92C_RSV_CTRL, align 8
  %7 = load i32, i32* @R92C_RSV_CTRL_WLOCK_00, align 4
  %8 = call i32 @rtwn_setbits_1(%struct.rtwn_softc* %5, i64 %6, i32 %7, i32 0)
  %9 = load %struct.rtwn_softc*, %struct.rtwn_softc** %3, align 8
  %10 = load i64, i64* @R92C_RSV_CTRL, align 8
  %11 = add nsw i64 %10, 1
  %12 = call i32 @rtwn_setbits_1(%struct.rtwn_softc* %9, i64 %11, i32 8, i32 0)
  %13 = load %struct.rtwn_softc*, %struct.rtwn_softc** %3, align 8
  %14 = load i32, i32* @R92C_SYS_FUNC_EN, align 4
  %15 = load i32, i32* @R92C_SYS_FUNC_EN_CPUEN, align 4
  %16 = call i32 @rtwn_setbits_1_shift(%struct.rtwn_softc* %13, i32 %14, i32 %15, i32 0, i32 1)
  %17 = load %struct.rtwn_softc*, %struct.rtwn_softc** %3, align 8
  %18 = load i64, i64* @R92C_RSV_CTRL, align 8
  %19 = load i32, i32* @R92C_RSV_CTRL_WLOCK_00, align 4
  %20 = call i32 @rtwn_setbits_1(%struct.rtwn_softc* %17, i64 %18, i32 %19, i32 0)
  %21 = load %struct.rtwn_softc*, %struct.rtwn_softc** %3, align 8
  %22 = load i64, i64* @R92C_RSV_CTRL, align 8
  %23 = add nsw i64 %22, 1
  %24 = call i32 @rtwn_setbits_1(%struct.rtwn_softc* %21, i64 %23, i32 0, i32 8)
  %25 = load %struct.rtwn_softc*, %struct.rtwn_softc** %3, align 8
  %26 = load i32, i32* @R92C_SYS_FUNC_EN, align 4
  %27 = load i32, i32* @R92C_SYS_FUNC_EN_CPUEN, align 4
  %28 = call i32 @rtwn_setbits_1_shift(%struct.rtwn_softc* %25, i32 %26, i32 0, i32 %27, i32 1)
  ret void
}

declare dso_local i32 @rtwn_setbits_1(%struct.rtwn_softc*, i64, i32, i32) #1

declare dso_local i32 @rtwn_setbits_1_shift(%struct.rtwn_softc*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
